add starup options for netty